--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.6.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
