--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.2",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.6.0",
@@ -48,7 +49,8 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
   },
