--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nativewind": "^2.0.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.2",
