--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-curved-bottom-bar": "^3.5.1",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.6.0",
     "react-redux": "^9.2.0",
